--- a/templates/index.html
+++ b/templates/index.html
@@ -421,11 +421,11 @@
     <p class="paragraph center" id="video">Burada ise bizim su ile ilgili videomuz</p>
 
 <div class="center">
-  <button class="btn" id="openVideoBtn" id="haber">Videoyu Aç</button>
+  <button class="btn" id="openVideoBtn">Videoyu Aç</button>
 </div>
   </div>
 
-  <div class="content-second">
+  <div class="content-second" id="haber">
     <h1>Türkiye’de Kuraklık Tehdidi: Su Kaynakları Azalıyor.</h1>
     <p class="paragraph">
       Türkiye’de yağış rejimlerindeki değişim, artan sıcaklıklar ve su kaynaklarının azalması ciddi bir kuraklık riskini beraberinde getiriyor.
