--- a/templates/index.html
+++ b/templates/index.html
@@ -417,8 +417,8 @@
       <button class="btn" type="submit">İlginç Gerçekler (Su ile ilgili)</button>
     </form>
   </div>
-  <div class="content">
-    <p class="paragraph center" id="video">Burada ise bizim su ile ilgili videomuz</p>
+  <div class="content" id="video">
+    <p class="paragraph center">Burada ise bizim su ile ilgili videomuz</p>
 
 <div class="center">
   <button class="btn" id="openVideoBtn">Videoyu Aç</button>
