--- a/templates/index.html
+++ b/templates/index.html
@@ -335,18 +335,17 @@
   cursor: pointer;
 }
 
-    .navbar {
-  height: 5%;
+.navbar {
   width: 100%;
   background: #007acc;
-  padding: 1vw 2vw;
+  padding: 0.2rem 0.5rem; 
   display: flex;
   justify-content: center;
-  gap: 25px;
+  gap: 20px;
   position: sticky;
   top: 0;
   z-index: 999;
-  font-size: clamp(14px, 1.5vw, 24px);
+  font-size: clamp(14px, 1.3vw, 20px);
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 }
 
@@ -354,8 +353,9 @@
   color: white;
   font-weight: 600;
   text-decoration: none;
-  padding: 1vw 2vw;
+  padding: 0.2rem 0.5rem; 
 }
+
 
 .navbar a:hover {
   text-decoration: underline;
