--- a/templates/page3.html
+++ b/templates/page3.html
@@ -324,5 +324,162 @@ Derya başını salladı.<br>
 “Evet. Ve bu kez çok daha büyük biri.”<br>
 	  </p>
 	</div>
+		<div class="content"> 
+	<h4 class="title">Bölüm 2.2: Sinyalin Kaynağı</h4>
+		<p class="paragraph">
+ALFA robot köpek, laboratuvarın ortasında hologram bir harita açtı. <br>
+“Marmara çevresinde beş farklı bölgede yapay su tespit edildi.”<br>
+Derya kaşlarını çattı.<br>
+“Bu kadar geniş ölçekli üretim ancak bir devlet, bir mega şirket veya çok güçlü bir örgüt yapabilir.”<br>
+Emirhan haritaya yaklaştı.<br>
+“Bak anne sinyaller bir noktada birleşiyor.”<br>
+Haritanın merkezinde tek bir yer yanıp sönüyordu:<br>
+Karakaya Dağları Bölge 5<br>
+Derya fısıldadı:<br>
+“Orada… eski bir askeri araştırma üssü vardı.”<br>
+Emirhan heyecanlandı:<br>
+“Orada birileri gizlice yeni bir AquaGen mi yapıyor?”<br>
+Derya cevap vermedi.<br>
+Çünkü bunu o da düşünmek istemiyordu.<br>
+	  </p>
+	</div>
+			<div class="content"> 
+	<h4 class="title">Bölüm 2.3: 5 Üssüne Yolculuk</h4>
+		<p class="paragraph">
+Ertesi sabah Derya, ALFA ve bir keşif ekibiyle dağa doğru yola çıktı. <br>
+Kar fırtınası gibi soğuk bir rüzgâr esiyordu; iklim değişmiş, Türkiye’nin kalbi bile soğumaya başlamıştı. <br>
+Üssün girişine geldiklerinde kapı yarı açıktı.<br>
+Derya silahını kaldırdı.<br>
+“Hazır olun. Biri buradaydı… hâlâ da olabilir.”<br>
+İçeride terk edilmiş laboratuvarlar, kırık camlar ve duvarlarda karalamalar vardı.<br>
+Bir yazı özellikle Derya’nın dikkatini çekti:<br>
+“SU KADER DEĞİLDİR.”<br>
+Emirhan olsaydı bunu mutlaka yorumlardı, diye düşündü.<br>
+Sonra bir ses duyuldu.<br>
+ALFA uyardı:<br>
+“Hareket tespit edildi.”<br>
+Karanlıkta biri nefesini tutmuş onları izliyordu.<br>
+	  </p>
+	</div>
+				<div class="content"> 
+	<h4 class="title">Bölüm 2.4: Gölgelerin İçinden Çıkan Adam</h4>
+		<p class="paragraph">
+Derya fenerini doğrulttu. <br>
+İnce yapılı, sakallı bir adam ellerini kaldırarak ortaya çıktı.<br>
+“Vurmayın! Ben Dr. Erdem Kara.”<br>
+Derya irkildi.<br>
+“Erdem Kara mı? AquaGen projesinin kurucularından biri Erdem Kara'ydı.”<br>
+Adam başıyla onayladı.<br>
+“Evet. Ve o proje yüzünden hayatım karardı.”<br>
+Derya soruyu yapıştırdı:<br>
+“Yağmuru siz mi ürettiniz?”<br>
+Adam gözlerini kaçırdı.<br>
+“Hayır. Ama onları durdurmak için buradayım.”<br>
+“Onlar kim?”<br>
+Adam yavaşça derin nefes aldı.<br>
+“AquaGen 2.0 projesini başlatanlar… artık hükümet değil. Küresel bir konsorsiyum. Yeni dünya düzeni için suyu silah yapıyorlar.”<br>
+Derya’nın kanı dondu.<br>
+	  </p>
+	</div>
+					<div class="content"> 
+	<h4 class="title">Bölüm 2.5: Proje AquaGen 2.0</h4>
+		<p class="paragraph">
+Erdem Kara onları eski merkezi kontrol odasına götürdü. <br>
+Hologram masa kendi kendine açıldı, dosyalar parladı.<br>
+Erdem anlatmaya başladı:<br>
+“Ben yıllar önce yapay suyu üretmenin insanlığa faydası olacağını sanmıştım. Ama sonra fark ettim… yapay su, doğal havzaları kirletiyor.”<br>
+Derya kaşlarını çattı.<br>
+“Yani yağmur… kirli bir döngü yaratıyor?”<br>
+“Evet. Eğer durdurmazsak 10 yıl içinde gezegenin su döngüsü çöker. Denizler bile bozulur.”<br>
+ALFA verileri doğruladı.<br>
+“Sinyaller artıyor. Üretim kapasitesi yükseltilmiş.”<br>
+Derya sordu:<br>
+“Peki üssü neden terk etmişler?”<br>
+Erdem gülümsedi.<br>
+“Çünkü asıl üretim merkezi burada değil.”<br>
+Hologramda yeni bir koordinat çıktı:<br>
+“AquaGen Merkez Tesisi – Marmara Açıkları – Deniz Altı, Seviye 12”<br>
+Derya şaşkınlıkla sordu:<br>
+“Denizin altında mı?”<br>
+“Evet. Ve oraya inmek… ölümcül olabilir.”<br>
+	  </p>
+	</div>
+						<div class="content"> 
+	<h4 class="title">Bölüm 2.6: Emirhan’ın Gizli Mesajı</h4>
+		<p class="paragraph">
+Aynı anda İstanbul’da Emirhan, annesinin ekibinin açık bıraktığı terminalde araştırma yapıyordu. <br>
+“Su Dedektifleri” kulübünden üç arkadaşı yanındaydı.<br>
+Bir dosya dikkatini çekti:<br>
+“AquaGen 2.0  Çocuklar için İçerik Uyarısı”<br>
+Ama dosya kilitliydi.<br>
+Emirhan parmaklarını ekrana vurdu.<br>
+“Hadi… açıl…”<br>
+Sonunda dosya açıldı.<br>
+Görüntüler korkutucuydu: Dev denizaltı tünelleri, parlayan sahte su havzaları, yüzlerce işçi…<br>
+Ve bir rapor:<br>
+“Yapay suyun büyük kısmı atmosfer döngüsüne pompalanacak.”<br>
+Emirhan’ın nefesi kesildi.<br>
+“Yağmur… yapay yağmurmuş!”<br>
+Hemen annesine mesaj attı:<br>
+“Anne! Yağmur gerçek değil! Dikkatli olun!”<br>
+Ama sinyal karıştı.<br>
+Mesaj yola çıktı fakat…<br>
+karşı tarafa bozularak ulaştı.<br>
+	  </p>
+	</div>
+							<div class="content"> 
+	<h4 class="title">Bölüm 2.7: Deniz Altının Kapısı</h4>
+		<p class="paragraph">
+Derya ve ekibi denizaltı modülüne binerken bozuk mesaj geldi. <br>
+Sadece üç kelime netti:<br>
+“Yağmur değil tehlike”<br>
+Derya dişlerini sıktı.<br>
+“Emirhan bir şey buldu. Ve büyük olmalı.”<br>
+Denizaltı yavaşça derinlere inmeye başladı.<br>
+Pencereden dışarı bakınca ışık huzmeleri karanlık suya karışıyordu.<br>
+Sonunda devasa bir kapı belirdi:<br>
+AquaGen 2.0 – Ana Üretim Merkezi<br>
+Kapı kendi kendine açıldı.<br>
+İçeriden mavi ışıklar, dev su tanklarının sesi ve insanı titreten bir uğultu yükseliyordu.<br>
+Erdem Kara fısıldadı:<br>
+“İşte… dünyanın kaderini değiştirecek makine.”<br>
+Derya tabancasını kavradı.<br>
+“Ve biz onu durduracağız.”<br>
+	  </p>
+	</div>
+								<div class="content"> 
+	<h4 class="title">Bölüm 2.8: Yapay Yağmurun Kalbi</h4>
+		<p class="paragraph">
+Tesise girdiklerinde metal koridorlar boyunca onlarca robot işçi çalışıyordu. <br>
+Orta odada dev bir makine yükseliyordu:<br>
+Atmosferik Su Pompaj Çekirdeği<br>
+Bir robotik kol gökyüzüne dev bir boru uzatıyordu.<br>
+Derya bağırdı:<br>
+“Bunu durdurun! Gezegenin su döngüsünü yok edeceksiniz!”<br>
+Gölgelerden biri çıktı.<br>
+Siyah kıyafetli bir kadın. Sakin, soğuk.<br>
+“Komiser Yalın… yine sen. Bu kez karşında devlet yok. Tüm dünyanın su geleceğini yönetenler var.”<br>
+Derya gözlerini kısmıştı.<br>
+“Su geleceğini yönetemezsiniz.”<br>
+Kadın gülümsedi.<br>
+“Ama kontrol edebiliriz. Çünkü insanlar suyu hak etmiyor.”<br>
+Erdem Kara öne çıktı.<br>
+“Yanılıyorsunuz. Suya ihanet eden sizsiniz!”<br>
+Kadın elini kaldırdı.<br>
+“Makineyi çalıştır.”<br>
+Dev motorlar titredi. Tavan yarıldı. Yapay su gökyüzüne fışkırdı.<br>
+Ama Derya bağırdı:<br>
+“ALFA! Çekirdek kablolarını kopar!”<br>
+ALFA sıçradı, kolunu uzattı<br>
+SİSTEM UYARISI:<br>
+“KORUMA MODU AKTİF.”<br>
+Sistemin içinden yüksek bir ses yankılandı.<br>
+Ve ışıklar patladı. Makine kontrolden çıkmaya başladı.<br>
+																																																																																																								 2054 yılında su, dünyanın en değerli ve en tehlikeli kaynağına dönüşmüştür. İstanbul Su Suçları Birimi’nden Komiser Derya Yalın, kurumuş Tuz Gölü’nün altında gizlenen yasadışı bir tesisi keşfeder. Yanında gizlice gelen oğlu Emirhan’la birlikte, insanlığın kaderini değiştirebilecek gerçek bir su kaynağına ulaşırlar.<br>
+Ancak suyun peşinde sadece onlar yoktur—karaborsa çeteleri, eski bilim insanları ve küresel bir konsorsiyum, yapay suyla dünyayı kontrol etmeye hazırlanmaktadır. Derya ve Emirhan, doğal suyun son damlasını korumak için yeraltı tünellerinden deniz altı laboratuvarlarına uzanan bir maceraya sürüklenir.<br>
+Su tükenirken umut yeniden filizlenebilir mi? <br>
+Yoksa insanlık kendi yaptığı yapay yağmurun altında mı boğulacak? <br>
+	  </p>
+	</div>
 </body>
 </html>
