--- a/templates/index.html
+++ b/templates/index.html
@@ -82,8 +82,8 @@
       padding: 25px 40px;
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.25);
       margin: 40px auto;
-      max-width: 25%;
-      height: 20%;
+      max-width: 75%;
+      max-height: 50%;
       text-align: center;
       position: relative;
       animation: contentanim1 4s ease-out forwards;
