--- a/templates/index.html
+++ b/templates/index.html
@@ -455,7 +455,7 @@
   </div>
 
   <div class="main-img">
-    <img src="{{ url_for('static', filename='SuProje-Resim1.avif') }}" alt="Ana görsel" loading="lazy" decoding="async"/>
+    <img src="{{ url_for('static', filename='SuProje-Res4.avif') }}" alt="Ana görsel" loading="lazy" decoding="async"/>
   </div>
 
   <div class="content-second">
