--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Su Önemi</title>
+  <link rel="icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
 
   <style>
     * {
