--- a/templates/page4.html
+++ b/templates/page4.html
@@ -83,6 +83,11 @@
       background-color: #FF2B00;
     }
 
+    .content .btn2 {
+      display: flex;
+      justify-content: center;
+    } 
+
     @media (max-width: 768px) {
       .content {
         padding: 20px 15px;
