--- a/templates/index.html
+++ b/templates/index.html
@@ -357,17 +357,19 @@
   color: white;
   font-weight: 600;
   text-decoration: none;
-  padding: 0.2rem 0.5rem; 
+  padding: 0.2rem 0.5rem;
+  border-radius: 8px;
+  transition: background 1s, color 1s;
 }
 
 
 .navbar a:hover {
-  text-decoration: underline;
+  background: rgba(255,255,255,0.18);
 }
 
 .nav-links {
   display: flex;
-  gap: 20px;
+  gap: 25px;
 }
 
 .nav-logo {
