--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,8 @@ body.dark {
     }
 
     .side-image {
-      max-width: 40vw;
+      width: 200px;
+      max-width: 10vw;
       object-fit: cover;
       border-radius: 20px;
       border: 3px solid var(--border-color);
